# SnapServe

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
snapserve/: __init__.py  app.py  auth.py  browser.py  cli.py  config.py  og_image.py  pdf_engine.py  screenshot.py  storage.py
tests/: test_snapserve.py
